# 15442Project

./: .gitignore  README.md  test1.txt
chess-game/: README.md  confidence-prediction.py  config_ng1.yml  speculate_hit_heuristic.py  trajectory_step_report.py
chess-game/regular_workflow/: regular_chess.py
chess-game/speculative_workflow/: Speculative_Chess.py
e-commerce/: README.md
hotpotqa/: README_COST_SCHEDULER.md  requirements.txt  run.py  samples.json  samples20.json  samples_large.json
hotpotqa/src/: analysis.py  constants.py  environment.py  llm_client.py  metrics.py  runner.py  scheduler.py  utils.py  wrappers.py
hotpotqa/tests/: conftest.py  test_spec_policy_stage1.py  test_stage2_step_records.py  test_stage3_scheduler.py  test_stage4_metrics.py  test_stage5_split.py  (+1 more)
os-tuning/: README.md  pyproject.toml  requirements.txt
os-tuning/config/use_case/: actor_only_convergence.json  actor_only_reaction.json  dual_convergence.json  dual_reaction.json  speculator_only_convergence.json  speculator_only_reaction.json
os-tuning/scripts/: build_paper_reaction_controls.py  calibrate_reaction_baseline.py  plot_use_case.py  run_use_case.sh  setup.sh
os-tuning/src/barebones_optimizer/: __init__.py  benchmark.py  config.py  main.py  optimizer.py  parameter_manager.py  reaction.py
os-tuning/src/barebones_optimizer/benchmarks/: __init__.py  sysbench.py
os-tuning/src/barebones_optimizer/tuners/: __init__.py  base.py  llm.py
os-tuning/tests/: run_tests.sh  test_config.py  test_llm.py  test_optimizer.py  test_parameter_manager.py  test_plotting.py
(+60 files in other folders)
